Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37183

Application crashes when floating QToolBar is placed into zero-height window

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 4.8.5, 5.2.1
    • None
    • OS: Windows 7 x64 SP1
      Qt: 5.2.1
    • e38ad9455099a83e2a8619f19ca949bc64ae6f82 (stable, 10.4.2014), Qt 4: 68a911862e05400ced87971c43fb27fb5d5d8ebd (4.8, 10.4.2014, 4.8.7)

      1. Create QMainWindow with QToolbar only inside. Menu bar may be added too, it does not matter.
      2. Drag the toolbar out of the window.
      3. Resize the window to minimal possible size, so client area is not visible.
      4. Drag the toolbar back to the window.
      5. Normally, a toolbar moves back to client area, but in this case an application crashes.

      Expected behaviour is resizing client area to approciate size for fitting a toolbar.

      Stack trace:

      0: abort
      1: qt_message_fatal
      2: QMessageLogger::fatal
      3: qt_assert
      4: QToolBarAreaLayout::item
      5: QToolBarAreaLayout::plug
      6: QMainWindowLayoutState::plug
      7: QMainWindowLayout::plug
      8: QToolBarPrivate::endDrag
      9: QToolBarPrivate::mouseReleaseEvent
      10: QToolBar::event
      ...

        1. qtbug37183_stack.tasks
          2 kB
          Friedemann Kleint
        2. qtbug37183_stack.txt
          3 kB
          Friedemann Kleint
        3. qtbug37183.zip
          1 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-37183
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            arhad Oleg Yarigin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes